# LM-service

./: pyproject.toml
examples/epd/: disagg_epd_proxy.py
lm_service/apis/vllm/: proxy.py
lm_service/workers/vllm/: disagg_worker.py
tests/e2e/: __init__.py  conftest.py  model_utils.py
tests/e2e/epd/: __init__.py  conftest.py  test_api_datasystem.py  test_api_mooncake.py  test_api_shm.py  test_http_mooncake.py  test_http_shm.py  test_params.py  test_timeout_error.py  test_ttft_tracing.py
tests/e2e/epd/configs/: test_config.yaml
tests/e2e/nightly/multi_node/config/: multi_node_config.py  multi_node_epd_config.py  utils.py
tools/: aisbench.py  api_server.py
