[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lm_service"
version = "0.1.0"
description = "Disaggregated vLLM service components"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "lm-service maintainers" }]
dependencies = [
    "msgspec>=0.18",
    "numpy>=1.24",
    "pyzmq>=25.0",
    "regex>=2024.5",
    "uvloop>=0.19; platform_system != 'Windows'",
]

[project.optional-dependencies]
develop = [
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=7.4",
    "ruff>=0.4",
    "types-PyYAML",
    "types-requests",
    "types-setuptools",
    "pytest-cov>=4.0",
    "coverage[toml]>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lm_service*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["lm_service"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"
